force-app/main/default/objects/BMCServiceDesk__SYSQVFieldInfo__c/BMCServiceDesk__SYSQVFieldInfo__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for the fields in QuickViews.</description>
    <label>Quickview Fields Info</label>
    <nameField>
        <label>SYSQVFieldInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYSQVFieldInfo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>