force-app/main/default/objects/BMCServiceDesk__SYSQVFieldInfo__c/fields/BMCServiceDesk__columnWidth__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__columnWidth__c</fullName>
    <label>Column Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>