force-app/main/default/objects/BMCServiceDesk__SYSQVFieldInfo__c/fields/BMCServiceDesk__displayPosition__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__displayPosition__c</fullName>
    <label>Display Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>