force-app/main/default/objects/BMCServiceDesk__SYSQVFieldInfo__c/fields/BMCServiceDesk__FKSYSQVQuery__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKSYSQVQuery__c</fullName>
    <label>FKSYSQVQuery</label>
    <referenceTo>BMCServiceDesk__SYSQVQuery__c</referenceTo>
    <relationshipLabel>SYSQVFieldInfo</relationshipLabel>
    <relationshipName>SYSQVFieldInfo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>