force-app/main/default/objects/BMCServiceDesk__SYSQVFieldInfo__c/fields/BMCServiceDesk__isDisplayed__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__isDisplayed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Displayed</label>
    <type>Checkbox</type>
</CustomField>