force-app/main/default/objects/BMCServiceDesk__SYSQVFieldInfo__c/fields/BMCServiceDesk__isWrappable__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__isWrappable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Wrappable</label>
    <type>Checkbox</type>
</CustomField>