force-app/main/default/objects/BMCServiceDesk__SYSQVFieldInfo__c/fields/BMCServiceDesk__sortOrder__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__sortOrder__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>