force-app/main/default/objects/BMCServiceDesk__SYSQVFieldInfo__c/fields/BMCServiceDesk__sortType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__sortType__c</fullName>
    <label>Sort Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>